2008-05-12  Kevin Decker  <kdecker@apple.com>

        Reviewed by Anders.

        Fixed: <rdar://problem/5840884>_recursive_resumeNullEventsForAllNetscapePlugins and _pauseNullEvents not defined
        
        Re-added these SPI methods because they are needed by some clients. They were accidentally removed
        in changeset <http://trac.webkit.org/changeset/31028>
        
        * Plugins/WebBaseNetscapePluginView.h: Added stopTimers, restartTimers to the header.
        * WebView/WebFrame.mm:
        (-[WebFrame _recursive_resumeNullEventsForAllNetscapePlugins]): Re-addd.
        (-[WebFrame _recursive_pauseNullEventsForAllNetscapePlugins]): Ditto.
        * WebView/WebFrameInternal.h: Ditto.
        * WebView/WebHTMLView.mm: Ditto.
        (-[WebHTMLView _pauseNullEventsForAllNetscapePlugins]): Ditto.
        (-[WebHTMLView _resumeNullEventsForAllNetscapePlugins]): Ditto.
        * WebView/WebHTMLViewInternal.h: Ditto.
        * WebView/WebHTMLViewPrivate.h: Ditto.

2008-05-12  Anders Carlsson  <andersca@apple.com>

        Reviewed by Alexey.

        Empty the application cache when changing the cache model.
        
        * WebView/WebView.mm:
        (+[WebView _setCacheModel:]):

2008-05-12  Anders Carlsson  <andersca@apple.com>

        Reviewed by Oliver.

        <rdar://problem/5774495> Make Unicode text input possible in Netscape-style plug-ins
        
        * Plugins/WebBaseNetscapePluginView.h:
        * Plugins/WebBaseNetscapePluginView.mm:
        (-[WebBaseNetscapePluginView start]):
        Get the plug-in text input vtable pointer.
        
        (-[WebBaseNetscapePluginView stop]):
        Set the plug-in text input vtable pointer to 0.
        
        (-[WebBaseNetscapePluginView inputContext]):
        Return 0 for Carbon plug-ins since we don't want Cocoa to handle text input for them.
        
        (-[WebBaseNetscapePluginView hasMarkedText]):        
        (-[WebBaseNetscapePluginView insertText:]):