@@ -1,3 +1,14 @@
+2008-05-12  Mark Rowe  <mrowe@apple.com>
+
+        Reviewed by Tim Hatcher.
+
+        <rdar://problem/5835604> Deprecate HIWebView
+
+        Use of HIWebView is deprecated in favor of embedding a WebView in a HICocoaView.
+
+        * Carbon/CarbonUtils.h: Include the availability macro header and decorate the functions appropriately.
+        * Carbon/HIWebView.h: Ditto.
+
 2008-05-12  Kevin Decker  <kdecker@apple.com>
 
         Reviewed by Anders.
